--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "axios": "^1.7.9",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
