--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "postcss": "^8",
